website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.0.1/guides/markdown-features/markdown-features-plugins.mdx
---
id: plugins
description: Using MDX plugins to expand Docusaurus Markdown functionalities
slug: /markdown-features/plugins
---

# MDX插件

有时您可能需要扩展或调整Markdown语法。例如：

- 如何使用图片语法(`![](https://youtu.be/yKNxeF4KMsY)`)嵌入YouTube视频？
- 如何单独设置独立成行的链接样式（例如社交卡片样式）？
- 如何让每个页面开头都显示版权声明？

答案是：创建MDX插件！MDX内置了[插件系统](https://mdxjs.com/advanced/plugins/)，可用于自定义Markdown文件如何被解析并转换为JSX。MDX插件有三种典型使用场景：

- 使用现有的[remark插件](https://github.com/remarkjs/remark/blob/main/doc/plugins.md#list-of-plugins)或[rehype插件](https://github.com/rehypejs/rehype/blob/main/doc/plugins.md#list-of-plugins)
- 创建remark/rehype插件来转换现有MDX语法生成的元素
- 创建remark/rehype插件为MDX引入新语法

如果您使用[MDX在线编辑器](https://mdxjs.com/playground/)实验，会注意到MDX转译有两个中间步骤：Markdown抽象语法树(MDAST)和超文本抽象语法树(HAST)，最终才输出JSX。MDX插件也分为两种形式：

- **[Remark](https://github.com/remarkjs/remark/)**：处理Markdown抽象语法树
- **[Rehype](https://github.com/rehypejs/rehype/)**：处理超文本抽象语法树

:::tip

使用插件为项目中最常用的JSX元素引入简洁语法。我们提供的[提示框语法](./markdown-features-admonitions.mdx)也是通过Remark插件实现的，您可以为自己的用例实现类似功能。

:::

## 默认插件 {#default-plugins}

Docusaurus在Markdown处理过程中会注入[一些默认Remark插件](https://github.com/facebook/docusaurus/tree/main/packages/docusaurus-mdx-loader/src/remark)。这些插件能够：

- 生成目录
- 为每个标题添加锚点链接
- 将图片和链接转换为`require()`调用
- ...

这些都是Remark插件的典型用例，也可以作为您实现自定义插件的参考。

## 安装插件 {#installing-plugins}

MDX插件通常是npm包，因此可以使用npm像安装其他npm包一样安装它们。以[数学公式插件](./markdown-features-math-equations.mdx)为例。

```bash npm2yarn
npm install --save remark-math@5 rehype-katex@6
```

<details>
  <summary>How are <code>remark-math</code> and <code>rehype-katex</code> different?</summary>

In case you are wondering how Remark and Rehype are different, here is a good example. `remark-math` operates on the Markdown AST, where it sees text like `$...$`, and all it does is transform that to the JSX `<span class="math math-inline">...</span>` without doing too much with the content. This decouples the extraction of math formulae from their rendering, which means you can swap $\KaTeX$ out with other math renderers, like MathJax (with [`rehype-mathjax`](https://github.com/remarkjs/remark-math/tree/main/packages/rehype-mathjax)), just by replacing the Rehype plugin.

Next, the `rehype-katex` operates on the Hypertext AST where everything has been converted to HTML-like tags already. It traverses all the elements with `math` class and uses $\KaTeX$ to parse and render the content to actual HTML.

</details>

:::warning

许多官方Remark/Rehype插件[仅支持ES Modules](https://gist.github.com/sindresorhus/a39789f98801d908bbc7ff3ecc99d99c)，这是Docusaurus支持的JavaScript模块系统。我们建议使用[ES Modules](https://flaviocopes.com/es-modules/)配置文件来简化这类包的导入。

:::

接下来，在`docusaurus.config.js`中导入插件并通过插件或预设配置添加到插件选项中：

```js title="docusaurus.config.js"
// highlight-start
import remarkMath from 'remark-math';
import rehypeKatex from 'rehype-katex';
// highlight-end

// highlight-start
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          path: 'docs',
          // highlight-start
          remarkPlugins: [remarkMath],
          rehypePlugins: [rehypeKatex],
          // highlight-end
        },
      },
    ],
  ],
};
```

<details>
  <summary>Using a [**CommonJS**](https://nodejs.org/api/modules.html#modules-commonjs-modules) config file?</summary>

If you decide to use a CommonJS config file, it is possible to load those ES module plugins thanks to dynamic imports and an async config creator function:

```js title="docusaurus.config.js"
// highlight-start
module.exports = async function createConfigAsync() {
  // highlight-end
  return {
    presets: [
      [
        '@docusaurus/preset-classic',
        {
          docs: {
            path: 'docs',
            // highlight-start
            remarkPlugins: [(await import('remark-math')).default],
            rehypePlugins: [(await import('rehype-katex')).default],
            // highlight-end
          },
        },
      ],
    ],
  };
};
```

</details>

## 配置插件 {#configuring-plugins}

某些插件支持配置并接受特定选项。这种情况下，请使用`[插件, 插件选项]`语法，例如：

```js title="docusaurus.config.js"
import rehypeKatex from 'rehype-katex';

export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          rehypePlugins: [
            // highlight-start
            [rehypeKatex, {strict: false}],
            // highlight-end
          ],
        },
      },
    ],
  ],
};
```

您应该查阅插件文档了解其支持的选项。

## 创建新的rehype/remark插件 {#creating-new-rehyperemark-plugins}

如果现有插件无法满足您的定制需求，您可以自行创建MDX插件。

:::note

以下内容**并非**创建插件的完整指南，仅用于说明如何使其在Docusaurus中生效。如需深入了解工作原理，请参阅[Remark](https://github.com/remarkjs/remark/blob/main/doc/plugins.md#create-plugins)或[Rehype](https://github.com/rehypejs/rehype/blob/main/doc/plugins.md#create-plugins)官方文档。

:::

例如，我们创建一个为所有二级标题添加"第X节"前缀的插件。首先在任意位置创建插件源文件（也可发布为独立npm包并通过上述方式安装），此处我们将插件置于`src/remark/section-prefix.js`。remark/rehype插件本质上是接收`options`并返回AST转换器的函数。

```js "src/remark/section-prefix.js"
import visit from 'unist-util-visit';

const plugin = (options) => {
  const transformer = async (ast) => {
    let number = 1;
    visit(ast, 'heading', (node) => {
      if (node.depth === 2 && node.children.length > 0) {
        node.children.unshift({
          type: 'text',
          value: `Section ${number}. `,
        });
        number++;
      }
    });
  };
  return transformer;
};

export default plugin;
```

现在您可以在`docusaurus.config.js`中导入该插件，其使用方式与安装的第三方插件完全相同！

```js title="docusaurus.config.js"
// highlight-next-line
import sectionPrefix from './src/remark/section-prefix';

export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          remarkPlugins: [sectionPrefix],
        },
      },
    ],
  ],
};
```

:::tip

转换器的第二个参数[`vfile`](https://github.com/vfile/vfile)可用于获取当前Markdown文件路径：

```js
const plugin = (options) => {
  const transformer = async (ast, vfile) => {
    ast.children.unshift({
      type: 'text',
      value: `当前文件路径为 ${vfile.path}`,
    });
  };
  return transformer;
};
```

例如我们的`transformImage`插件就利用此参数将相对图片引用转换为`require()`调用。

:::

:::note

Docusaurus默认插件会在自定义remark插件之前执行，这意味着图片/链接此时已被转换为带`require()`调用的JSX。例如上例中，虽然所有二级标题都添加了"第X节"前缀，但生成的目录仍保持不变，因为目录生成插件先于自定义插件执行。若需在默认插件处理前操作MDAST，请使用`beforeDefaultRemarkPlugins`和`beforeDefaultRehypePlugins`：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          beforeDefaultRemarkPlugins: [sectionPrefix],
        },
      },
    ],
  ],
};
```

如此生成的目录也会包含"第X节"前缀。

:::